<resources>
    <string name="app_name">Tabletop Tools</string>
    <string name="coin_flip">Coin Flip</string>
    <string name="dice">Dice</string>
    <string name="spinner">Spinner</string>
    <string name="guides">Guides</string>
    <string name="more_options">More Options</string>
    <string name="flip_me">Flip Me!</string>

    <string name='h'>Head</string>
    <string name="t">Tail</string>

    <string name="ready_to_roll">Ready To Roll</string>

    <string name="pointer_for_user_visual">Pointer for user visual</string>
    <string name="pts">Points</string>
    <string name="aww_there_is_nothing_here">Aww… There is Nothing here…</string>

    <string name="err">Something went wrong, please restart the app!</string>
    <string name="kind_of_lonely_in_here">Kind of lonely in here…</string>
    <string name="new_ch">New Challenger</string>
    <string name="only_default">Only 100% default.</string>
    <string name="adding_more_option">Adding more option</string>
    <string name="clear">Clear</string>
    <string name="search">Search</string>
    <string name="add_player">Add Player</string>
    <string name="settings">Settings</string>
    <string name="set_color">Set Color</string>
    <string name="share_this_app">Share This App</string>
    <string name="full_reset">Full Reset</string>
</resources>